# ProcurePro

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
ProcurePro/: asgi.py  settings.py  urls.py  wsgi.py
ProcurePro/core/: urls.py
core/: admin.py  backends.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_and_more.py  0002_remove_tenders_contractor_id_alter_bids_bid_price_and_more.py  0003_alter_tenders_description.py  0003_alter_user_user_type.py  0004_alter_tenders_deadline_alter_tenders_opening_date.py  0004_remove_user_first_name_remove_user_last_name_and_more.py  0005_alter_bids_supplier_alter_tender_contractor.py  0005_rename_tenders_tender.py  0006_rename_supplier_bids_owner_and_more.py  0007_rename_description_tender_requirement_details_and_more.py  (+17 more)
templates/: accordion.html  activity.html  base.html  bid-details.html  bidding.html  biddings-listing.html  bids-listing.html  blank.html  blog-one.html  blog-three.html  blog-two.html  buttons.html  cards.html  carousel.html  changelog.html  charts.html  closed-tenders.html  colors.html  dropdowns.html  empty.html  error-404.html  error-500.html  error-maintenance.html  forgot-password.html  form-elements.html  index.html  invoice.html  landing-page.html  lists.html  main.html  modals.html  my-tenders.html  navigation.html  pagination.html  playground-dark.html  playground.html  profile.html  search-results.html  sign-in.html  sign-up.html  (+11 more)
(+50 files in other folders)
