[tool.poetry]
name = "procurepro"
version = "0.1.0"
description = "ProcurePro - tender management system"
authors = ["Mason Mapfundematsva <masomapfunde@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = "4.1.6"
dj-database-url = "1.2.0"
psycopg2-binary = "2.9.5"
asgiref = "3.6.0"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "3.0.1"
crispy-bootstrap5 = "0.7"
cryptography = "39.0.1"
defusedxml = "0.7.1"
django-allauth = "0.52.0"
django-cors-headers = "3.13.0"
django-crispy-forms = "1.14.0"
django-filter = "22.1"
django-rest-auth = "0.9.5"
djangorestframework = "3.14.0"
idna = "3.4"
oauthlib = "3.2.2"
pillow = "9.4.0"
pycparser = "2.21"
pyjwt = "2.6.0"
python3-openid = "3.2.0"
pytz = "2022.7.1"
requests = "2.28.2"
requests-oauthlib = "1.3.1"
six = "1.16.0"
sqlparse = "0.4.3"
tzdata = "2022.7"
urllib3 = "1.26.14"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
